# mnf

./: CMakeLists.txt  LICENSE  README  README.md
include/: hyperspectral.h  mnf.h  mnf_linebyline.h  readimage.h
src/: hyperspectral.cpp  main.cpp  mnf_c.cpp  mnf_linebyline.cpp  readimage.cpp
